# csv-light-editor

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  RUST_STYLE_GUIDE.md  package.json  pnpm-lock.yaml  sample.csv  sample.csv.csvmeta  test-data.csv
.claude/: settings.local.json
.github/: pull_request_template.md
app/: .eslintrc.json  .prettierignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: .env.example  .gitignore  AI_CONFIGURATION.md  Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  settings.rs  state.rs
app/src-tauri/src/ai/: analyzer.rs  config.rs  intent.rs  llm_client.rs  mod.rs  transformer.rs
app/src-tauri/src/ai_script/: executor.rs  generator.rs  mod.rs  models.rs  progress.rs  security.rs
app/src-tauri/src/chat/: history.rs  message.rs  mod.rs
app/src-tauri/src/commands/: ai.rs  csv.rs  file.rs  mod.rs  settings.rs
app/src-tauri/src/csv_engine/: cleansing.rs  data_types.rs  export.rs  mod.rs  quality.rs  reader.rs  streaming.rs  validation.rs  writer.rs
app/src-tauri/src/metadata/: manager.rs  mod.rs
app/src-tauri/src/utils/: error.rs
app/src-tauri/tests/contract/: test_cancel_script_execution.rs  test_execute_script.rs  test_generate_script.rs  test_get_script_progress.rs  test_load_chat_history.rs  test_save_chat_history.rs
app/src/lib/: utils.ts
docs/: README.md  ai-chat-python-execution-flow.md  implementation-tasks.md  keyboard-shortcuts.md  requirements.md  technical-architecture.md
(+46 files in other folders)
