[package]
name = "csv-light-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "shell-open", "dialog-all", "fs-all"] }
copypasta = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
encoding_rs = "0.8"
rayon = "1.8"
chardet = "0.2"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
regex = "1.10"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
dotenvy = "0.15"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
